# brave-core

./: DEPS  Jenkinsfile  brave_paks.gni  package-lock.json  package.json
android/: brave_java_resources.gni  brave_java_sources.gni
android/java/: AndroidManifest.xml
app/: brave_command_ids.h  brave_generated_resources.grd  generated_resources.grd  nearby_share_strings.grdp  os_settings_strings.grdp  settings_strings.grdp
app/vector_icons/: BUILD.gn
browser/: BUILD.gn  brave_browser_main_parts.cc  brave_browser_process.h  brave_browser_process_impl.h  brave_content_browser_client.cc  brave_profile_prefs.cc  sources.gni
browser/autoplay/: autoplay_browsertest.cc
browser/brave_rewards/: checkout_dialog.cc  checkout_dialog.h
browser/brave_search/: brave_search_browsertest.cc
browser/brave_shields/: ad_block_service_browsertest.cc  domain_block_page_browsertest.cc
browser/brave_wallet/: BUILD.gn  crypto_wallets_infobar_delegate.cc  crypto_wallets_infobar_delegate.h  sources.gni
browser/decentralized_dns/test/: BUILD.gn
browser/download/: BUILD.gn  brave_download_item_model.cc  brave_download_service_factory.cc
browser/extensions/: BUILD.gn
browser/extensions/api/: brave_wallet_api.cc  (+6 more)
browser/infobars/: BUILD.gn
browser/ipfs/: ipfs_tab_helper.cc  ipfs_tab_helper.h
browser/net/: brave_ad_block_tp_network_delegate_helper.cc  brave_ad_block_tp_network_delegate_helper.h  decentralized_dns_network_delegate_helper_unittest.cc
browser/ntp_background_images/: BUILD.gn
browser/profiles/: BUILD.gn  brave_profile_manager_browsertest.cc
browser/resources/: resource_ids
browser/resources/wallet_panel/: BUILD.gn  app.html  app.js  wallet_panel.html  wallet_panel_api_proxy.js
browser/search_engines/: private_window_search_engine_provider_service.cc  private_window_search_engine_provider_service.h  search_engine_provider_service_browsertest.cc  search_engine_provider_service_factory.cc
browser/tor/: BUILD.gn  onion_location_navigation_throttle_browsertest.cc  sources.gni  tor_profile_manager.h  tor_profile_manager_browsertest.cc
browser/ui/: BUILD.gn  brave_browser_command_controller.cc  brave_browser_command_controller_browsertest.cc  brave_ui.gni  browser_commands.cc
browser/ui/webui/wallet_panel/: BUILD.gn  wallet_panel_page_handler.h  wallet_panel_ui.cc  wallet_panel_ui.h
common/: pref_names.cc  pref_names.h
components/: components_strings.grd  page_info_strings.grdp
components/brave_new_tab_ui/: store.ts
components/brave_rewards/common/: BUILD.gn  constants.cc  constants.h  pref_names.cc  pref_names.h
components/brave_wallet/: brave_wallet_utils.cc  brave_wallet_utils.h  brave_wallet_utils_unittest.cc  eth_call_data_builder.cc  eth_call_data_builder.h  eth_call_data_builder_unittest.cc  eth_json_rpc_controller.cc  eth_json_rpc_controller.h
components/brave_wallet_ui/: BUILD.gn  brave_wallet_panel.tsx  storage.ts  store.ts
components/brave_wallet_ui/actions/: wallet_panel_actions.ts
components/brave_wallet_ui/components/extension/connect-with-site-panel/: style.ts
components/brave_wallet_ui/constants/: wallet_panel_types.ts
components/brave_wallet_ui/reducers/: panel_reducer.ts  wallet_panel_reducer.ts
components/common/: typescript.gni
components/definitions/: chromel.d.ts  newTab.d.ts  walletPanel.d.ts
components/ipfs/: ipfs_file_import_worker.cc  ipfs_json_parser.h  ipfs_json_parser_unittest.cc  ipfs_link_import_worker.cc  ipfs_network_utils.cc  ipfs_service.cc  ipfs_service.h
components/payments/content/: bat_payment_app.cc  bat_payment_app.h  bat_payment_app_factory.cc  bat_payment_app_factory.h  brave_payment_sources.gni
components/resources/: brave_components_strings.grd
components/tor/: BUILD.gn
ios/app/: headers.gni
ios/browser/api/history/: BUILD.gn  brave_history_api.h  brave_history_api.mm
patches/: base-BUILD.gn.patch  build-config-android-rules.gni.patch  build-config-compiler-BUILD.gn.patch  chrome-BUILD.gn.patch  chrome-VERSION.patch  chrome-android-BUILD.gn.patch  chrome-android-chrome_java_sources.gni.patch  chrome-android-features-tab_ui-BUILD.gn.patch  chrome-android-java-AndroidManifest.xml.patch  chrome-android-java-src-org-chromium-chrome-browser-AppHooks.java.patch  chrome-android-java-src-org-chromium-chrome-browser-app-ChromeActivity.java.patch  chrome-android-java-src-org-chromium-chrome-browser-autofill-settings-AutofillProfilesFragment.java.patch  chrome-android-java-src-org-chromium-chrome-browser-omnibox-suggestions-DropdownItemViewInfoListBuilder.java.patch  chrome-android-java-src-org-chromium-chrome-browser-toolbar-ToolbarManager.java.patch  chrome-android-java-src-org-chromium-chrome-browser-toolbar-top-ToolbarPhone.java.patch  chrome-browser-BUILD.gn.patch  chrome-browser-about_flags.cc.patch  chrome-browser-chrome_content_browser_client.h.patch  chrome-browser-extensions-BUILD.gn.patch  chrome-browser-extensions-extension_service.h.patch  chrome-browser-extensions-extension_tab_util.cc.patch  chrome-browser-flags-android-chrome_feature_list.cc.patch  chrome-browser-prefs-browser_prefs.cc.patch  chrome-browser-profiles-profile.cc.patch  chrome-browser-profiles-profile_impl.cc.patch  chrome-browser-profiles-profile_manager.cc.patch  chrome-browser-signin-identity_manager_factory.h.patch  chrome-browser-ui-BUILD.gn.patch  chrome-browser-ui-browser.cc.patch  chrome-browser-ui-chrome_pages.cc.patch  chrome-browser-ui-startup-startup_browser_creator_impl.cc.patch  chrome-browser-ui-tab_helpers.cc.patch  chrome-browser-ui-tabs-tab_strip_model.h.patch  chrome-browser-ui-views-location_bar-location_bar_view.cc.patch  chrome-browser-ui-views-location_bar-location_bar_view.h.patch  chrome-browser-ui-views-profiles-avatar_toolbar_button.h.patch  chrome-browser-ui-views-tabs-tab_hover_card_bubble_view.h.patch  chrome-browser-ui-views-toolbar-toolbar_view.cc.patch  chrome-browser-ui-views-toolbar-toolbar_view.h.patch  chrome-browser-ui-webui-chrome_web_ui_controller_factory.cc.patch  (+40 more)
test/: BUILD.gn
ui/brave_ads/: message_popup_view.cc  notification_header_view.cc  notification_header_view.h
(+159 files in other folders)
