import("//brave/components/brave_wallet/common/buildflags/buildflags.gni")
import("//extensions/buildflags/buildflags.gni")

assert(brave_wallet_enabled)

source_set("infobar") {
  visibility = [
    "//brave/browser/*",
    "//brave/test:brave_browser_tests",
    "//chrome/browser/*",
  ]

  sources = [
    "crypto_wallets_infobar_delegate.h",
  ]

  deps = [
    "//base",
    "//components/infobars/core",
    "//url",
  ]
}

source_set("brave_wallet_impl") {
  visibility = [ "//chrome/browser" ]

  sources = [
    "brave_wallet_delegate_impl.cc",
    "brave_wallet_delegate_impl.h",
    "brave_wallet_context_utils.cc",
  ]

  deps = [
    "//brave/components/brave_wallet/browser",
    "//brave/components/brave_wallet/common",
    "//components/keyed_service/content",
    "//content/public/browser",
    "//extensions/buildflags",
  ]

  if (enable_extensions) {
    deps += [
      "//brave/browser/extensions",
      "//chrome/browser/extensions",
      "//extensions/browser",
    ]
  }
}
