# Copyright (c) 2020 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/.
#

import("//brave/components/brave_wallet/common/buildflags/buildflags.gni")
import("//extensions/buildflags/buildflags.gni")

brave_browser_wallet_sources = []

brave_browser_wallet_deps = []

if (brave_wallet_enabled) {
  brave_browser_wallet_sources += [
    "//brave/browser/brave_wallet/brave_wallet_service_factory.cc",
    "//brave/browser/brave_wallet/brave_wallet_service_factory.h",
    "//brave/browser/brave_wallet/brave_wallet_context_utils.h",
    "//brave/browser/brave_wallet/crypto_wallets_infobar_delegate.cc",
  ]

  brave_browser_wallet_deps += [
    "//base",
    "//brave/app:brave_generated_resources_grit",
    "//brave/browser/brave_wallet:brave_wallet_impl",
    "//brave/browser/brave_wallet:infobar",
    "//brave/browser/ui",
    "//brave/common",
    "//brave/components/brave_wallet/browser",
    "//chrome/browser/ui",
    "//components/infobars/core",
    "//components/keyed_service/content",
    "//components/prefs",
    "//components/strings",
    "//content/public/browser",
    "//extensions/buildflags",
    "//extensions/common:common_constants",
    "//ui/base",
    "//ui/views",
  ]

  if (enable_extensions) {
    brave_browser_wallet_deps += [
      "//extensions/browser",
    ]
  }
}
