import("//build/config/features.gni")

source_set("download") {
  # Remove when https://github.com/brave/brave-browser/issues/10657 is resolved
  check_includes = false
  sources = [
    "brave_download_item_model.cc",
    "brave_download_item_model.h",
    "brave_download_service_factory.cc",
    "brave_download_service_factory.h",
  ]

  deps = [
    "//base",

    # //chrome/common/buildflag.h is referenced indirectly while building
    # brave_download_item_model.cc.
    "//chrome/common",

    "//brave/components/brave_shields/browser",

    # Need for //chrome/common/safe_browsing/download_file_types.pb.h included
    # from download_item_model.h.
    "//chrome/common/safe_browsing:proto",
    "//components/strings:components_strings_grit",
    "//services/network/public/cpp",
    "//ui/base",
    "//ui/gfx",
    "//url",
  ]
}
