import("//brave/components/brave_ads/browser/buildflags/buildflags.gni")
import("//brave/components/tor/buildflags/buildflags.gni")
import("//extensions/buildflags/buildflags.gni")

source_set("tor_impl") {
  visibility = [ "//chrome/browser" ]

  sources = [
    "tor_profile_service_factory.cc",
  ]

  deps = [
    "//base",
    "//brave/browser:browser_process",
    "//brave/components/tor",
    "//chrome/browser:browser_process",
    "//chrome/common",
    "//components/keyed_service/content",
    "//components/prefs",
    "//content/public/browser",
  ]
}

source_set("unit_tests") {
  testonly = true
  if (enable_tor) {
    sources = [
      "tor_navigation_throttle_unittest.cc",
      "tor_profile_manager_unittest.cc",
    ]

    deps = [
      "//base",
      "//base/test:test_support",
      "//brave/browser/translate/buildflags",
      "//brave/common:pref_names",
      "//brave/components/brave_webtorrent/browser/buildflags",
      "//brave/components/tor",
      "//brave/components/tor:test_support",
      "//chrome/common",
      "//chrome/test:test_support",
      "//components/keyed_service/content",
      "//components/safe_browsing/core/common:safe_browsing_prefs",
      "//components/translate/core/browser",
      "//content/public/browser",
      "//content/test:test_support",
      "//testing/gtest",
      "//third_party/blink/public/common",
      "//url",
    ]
  }
}

source_set("browser_tests") {
  testonly = true
  if (enable_tor) {
    sources = [
      "brave_local_state_browsertest.cc",
      "brave_tor_client_updater_browsertest.cc",
      "onion_location_navigation_throttle_browsertest.cc",
      "tor_profile_manager_browsertest.cc",
    ]

    deps = [
      "//base",
      "//brave/app:brave_generated_resources_grit",
      "//brave/browser",
      "//brave/browser/ui",
      "//brave/common",
      "//brave/components/ipfs/buildflags",
      "//brave/components/tor",
      "//brave/components/tor:pref_names",
      "//brave/components/tor:test_support",
      "//chrome/browser",
      "//chrome/browser:browser_process",
      "//chrome/test:test_support",
      "//chrome/test:test_support_ui",
      "//components/bookmarks/browser",
      "//components/bookmarks/common",
      "//content/public/browser",
      "//content/test:test_support",
      "//net:test_support",
      "//ui/views:test_support",
    ]

    if (enable_extensions) {
      deps += [
        "//extensions/browser",
        "//extensions/common",
      ]
    }

    if (brave_ads_enabled) {
      deps += [
        "//brave/browser/brave_ads",
        "//brave/components/brave_ads/browser",
      ]
    }

    defines = [ "HAS_OUT_OF_PROC_TEST_RUNNER" ]
  }
}
