import("//brave/components/common/typescript.gni")
import("//tools/grit/preprocess_if_expr.gni")

transpile_web_ui("brave_wallet_ui") {
  entry_points = [ [
        "brave_wallet",
        rebase_path("brave_wallet.tsx"),
      ] ]
  resource_name = "brave_wallet"
}

pack_web_resources("page_generated_resources") {
  resource_name = "brave_wallet"
  output_dir = "$root_gen_dir/brave/components/brave_wallet/resources"
  deps = [ ":brave_wallet_ui" ]
}

transpile_web_ui("brave_wallet_panel_ui") {
  entry_points = [ [
        "brave_wallet_panel",
        rebase_path("brave_wallet_panel.tsx"),
      ] ]
  resource_name = "brave_wallet_panel"
}

pack_web_resources("panel_generated_resources") {
  resource_name = "brave_wallet_panel"
  output_dir = "$root_gen_dir/brave/components/brave_wallet/resources"
  deps = [ ":brave_wallet_panel_ui" ]
}
