import("//brave/build/config.gni")
import("//brave/components/payments/content/buildflags/buildflags.gni")

source_set("features") {
  sources = [
    "features.cc",
    "features.h",
  ]

  deps = [ "//base" ]
}

source_set("common") {
  sources = [
    "pref_names.cc",
    "pref_names.h",
    "url_constants.cc",
    "url_constants.h"
  ]

  if (enable_pay_with_bat) {
    sources += [
      "constants.cc",
      "constants.h"
    ]
  }

  deps = [ ":features" ]
}
