# Copyright (c) 2020 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/.

import("//build/config/ios/rules.gni")
import("//ios/build/config.gni")

source_set("history") {
  configs += [ "//build/config/compiler:enable_arc" ]

#   headers = [
#       "brave_history_api"
#   ]

  sources = [
    "brave_history_api.h",
    "brave_history_api.mm"
  ]
  
  deps = [
    "//components/history/core/browser",
    #"//third_party/skia",
    "//base",
    "//net",
    "//url"
  ]

  frameworks = [
    "Foundation.framework",
  ]
}